# spanish-verbs

./: Cargo.toml  README.md  accent-filter.py  conjugate.py  generate.py  schema.yml  stem-changing-verbs.yml  validate.py  verb-schema.yml
src/: main.rs
verbs/: abalanzar.yml  abalanzarse.yml  abandonar.yml  abastecerse.yml  ablandar.yml  ablandarse.yml  abollar.yml  aborrecer.yml  abrasar.yml  abrazar.yml  abrier.yml  abrier.yml.to-be-deleted  abrigarse.yml  abrir.yml  abrirse.yml  abristir.yml  abristir.yml.to-be-deleted  abrochar.yml  absorber.yml  abuchear.yml  abultar.yml  aburrir.yml  abusar.yml  acabar.yml  acabarse.yml  acabároslar.yml  acallar.yml  acampar.yml  acariciar.yml  acceder.yml  accents  acechar.yml  acelerar.yml  aceptar.yml  acercar.yml  acercarse.yml  acerquar.yml  acertar.yml  acertir.yml  acertir.yml.to-be-deleted  (+2192 more)
